Refactor matches to segments (#8)
* Refactor matches to segments

* Fix tests

* Try to reduce API calls

* Try to reduce API calls (again)

* Fix tests

---------

Co-authored-by: Javier Ortiz Bultron <javierortiz@pingidentity.com>